# alchemist

./: .codex-review.toml  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .touchstone-config  .touchstone-manifest  .touchstone-version  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  TOUCHSTONE.md  pyproject.toml  railway.json  setup.sh
.claude/: settings.json
.cortex/: .discover.toml  config.toml  map.md  protocol.md  state.md
.cortex/journal/: 2026-05-11-alchemist-87.md  2026-05-12-alchemist-100.md  2026-05-12-alchemist-77.md  2026-05-12-alchemist-98.md  2026-05-12-pr-merged-1540.md  2026-05-14-alchemist-132.md  2026-05-14-alchemist-133.md  2026-05-14-alchemist-134.md  2026-05-14-alchemist-135.md  2026-05-14-alchemist-136.md  2026-05-14-alchemist-137.md  2026-05-15-alchemist-145.md  2026-05-15-alchemist-147.md  2026-05-15-alchemist-150.md  2026-05-17-alchemist-162.md  2026-05-18-alchemist-118.md  2026-05-18-alchemist-156.md  (+31 more)
docs/: internal-autumngarage.md  operator-runbook.md
lib/: preflight.sh  review-comment.sh
principles/: README.md  agent-swarms.md  ai-delivery-architecture.md  file-upstream-bugs.md  git-workflow.md
scripts/: branch-guard.sh  claim-issue.sh  codex-review.sh  cortex-pr-merged-hook.sh  emergency-disclosure.sh  issue-claim-check.sh  merge-pr.sh  open-pr.sh  railway-entrypoint.sh  run-pytest-in-venv.sh  setup-autumngarage-internal.sh  touchstone-run.sh  validate.sh
src/alchemist/: cli.py  (+11 more)
tests/: test_auth_token.py  test_banner.py  test_briefs.py  test_cli_smoke.py  test_config.py  test_locks.py  test_railway_entrypoint.py  test_reporter.py  test_runner.py  test_scanner.py
(+7 files in other folders)
