[project]
name = "alchemist"
dynamic = ["version"]
description = "Issue dispatcher and PR babysitter for external coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Henry Modisett" }]
keywords = ["github", "issues", "automation", "agent", "autumngarage", "codex", "devin"]

dependencies = [
    "click>=8.1.0",
    "pyjwt[crypto]>=2.8.0",
    "rich>=13.9.0",
]

[project.scripts]
alchemist = "alchemist.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
# Used when building outside a git checkout (e.g. inside a Docker build that
# doesn't ship .git history). CI release builds set
# SETUPTOOLS_SCM_PRETEND_VERSION explicitly so the published image matches the
# tag.
fallback-version = "0.0.0+nogit"

[tool.hatch.build.hooks.vcs]
version-file = "src/alchemist/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/alchemist"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.9.0",
]

[tool.uv]
exclude-newer = "2026-05-06T00:00:00Z"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live tool/network call — skipped when env not configured",
]

[[tool.mypy.overrides]]
module = "alchemist._version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jwt", "jwt.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
